add taggy project

--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -62,6 +62,7 @@ const contact = await Astro.glob("../pages/contact/*.md");
       projects.map(async (item) => {
         return (
           <Card
+            classList="mb-7"
             title={item.data.title}
             timeframe={item.data.date}
             description={await item.render()}
@@ -74,47 +75,6 @@ const contact = await Astro.glob("../pages/contact/*.md");
       })
     }
   </AccordionLayout>
-
-  <!-- <AccordionLayout title={"Blogs"} icon={"carbon:pen"}>
-    {
-      blogs.map((item) => {
-        return (
-          <Card
-            title={item.frontmatter.title}
-            timeframe={item.frontmatter.date}
-            description={item.compiledContent()}
-            url={item.frontmatter.url}
-            url_name={item.frontmatter.url_name}
-          />
-        );
-      })
-    }
-  </AccordionLayout> -->
-
-  <!-- <AccordionLayout title={"Files"} icon={"carbon:volume-file-storage"}>
-    <div class="flex justify-center w-full">
-      <div
-        class="card card-compact card-bordered border-[oklch(var(--s))] w-96 md:w-112 lg:w-128 hover:shadow-lg transition-all"
-      >
-        <figure>
-          <object data={PDF} type="application/pdf" width="100%"></object>
-        </figure>
-        <div class="card-body">
-          <h2 class="card-title">Resume</h2>
-          <p>View and download my resume by clicking on the button below</p>
-          <div class="card-actions justify-end">
-            <a target="_blank" href={PDF}>
-              <button class="btn btn-outline">
-                <p>Download resume</p>
-                <Icon name="carbon:document-pdf" class="w-6 h-6 ml-1" />
-              </button>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </AccordionLayout> -->
-
   <AccordionLayout title={"Contact"} icon={"carbon:location-person"}>
     <div class="flex flex-wrap content-around gap-4 justify-center mb-4 mt-3">
       {
