--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,12 +1,11 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-const { timeframe, title, description, org, tags,links,images, location } =
+const {classList, timeframe, title, description, org, tags,links,images, location } =
   Astro.props;
-
 ---
 
-<div class="card card-compact card-bordered border border-[oklch(var(--s))] w-full md:w-112 lg:w-128 hover:shadow-lg transition-all my-4">
+<div class:list={classList} class="card card-compact card-bordered border border-[oklch(var(--s))] w-full md:w-112 lg:w-128 hover:shadow-lg transition-all my-4">
   <div class="card-body">
     <div class="grid grid-cols-3 gap-y-1">
       {title &&
@@ -15,7 +14,7 @@ const { timeframe, title, description, org, tags,links,images, location } =
       </div>
       }
       {links &&
-        <div class="col-auto   justify-self-end">
+        <div class=`${links.length > 1 ? " col-start-1 col-span-2  sm:col-auto sm:justify-self-end justify-self-start" : "col-auto justify-self-end" }`>
                   {links.map(link => (<a target="_blank" href={link.url}>
                     <button  class="btn btn-outline ">
                       {link.label}
@@ -26,7 +25,7 @@ const { timeframe, title, description, org, tags,links,images, location } =
         </div>
 }
 {timeframe && 
-        <div class="col-auto" class:list={links ? "justify-self-start": "justify-self-end"}>
+        <div class="col-auto self-center" class:list={links? links.length > 1 ? "justify-self-end sm:justify-self-start": " justify-self-start" : "justify-self-end"}>
 
   <div class="badge w-max h-max text-center badge-outline inline-block align-middle shadow-md font-mono">
     {timeframe}
@@ -70,8 +69,8 @@ const { timeframe, title, description, org, tags,links,images, location } =
     </div>
    
     {images &&
-    <div class="carousel carousel-center bg-neutral rounded-box max-w-[85vw] sm:max-w-[60vw] space-x-4 p-4">
-  {images.map(img => 
+    <div class="carousel carousel-center rounded-box max-w-[85vw] sm:max-w-[60vw] space-x-4 p-4">
+       {images.map(img => 
     <div class="carousel-item w-[90%] md:w-6/12">
       <Image class:list="w-full rounded-box grayscale-[100] hover:grayscale-0"  src={img} quality='100' alt=`"${title}" project preview` width="600" height="500">
     </div>
