fix favicon urls

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,9 +32,9 @@ import { template_repo_link } from "../constants";
         ></svg
       >
     </a>
-    <span class="mx-3"> - </span>
-    <a target="_blank" class="link ml-1" href={template_repo_link}>
+    <!-- <span class="mx-3"> - </span> -->
+    <!-- <a target="_blank" class="link ml-1" href={template_repo_link}>
       source code</a
-    >
+    > -->
   </p>
 </footer>
