--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,6 @@
----
-import { template_repo_link } from "../constants";
----
-
 <footer class="flex justify-center items-center bg-transparent py-4">
   <p class="flex items-center text-center font-light text-sm text-secondary">
-    Made by <a target="_blank" class="link ml-1" href="https://astro.build/">
+    Made with <a target="_blank" class="link ml-1" href="https://astro.build/">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -32,9 +28,5 @@ import { template_repo_link } from "../constants";
         ></svg
       >
     </a>
-    <!-- <span class="mx-3"> - </span> -->
-    <!-- <a target="_blank" class="link ml-1" href={template_repo_link}>
-      source code</a
-    > -->
   </p>
 </footer>
