--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,9 @@ const baseURL = "portfolio";
       <Icon name="carbon:light" class="w-6 h-6 md:w-4 md:h-4" />
     </div>
 
-    <div class="divider mx-auto h-fit max-w-4xl sm:w-[95vw] flex flex-nowrap">
+    <div
+      class="divider mx-auto h-fit bg-zinc-100 max-w-4xl sm:w-[95vw] flex flex-nowrap"
+    >
     </div>
     <main class="mx-auto max-w-4xl py-3 w-[93vw] sm:w-[95vw]">
       <div class="container">
