--- a/src/components/ContactCard.astro
+++ b/src/components/ContactCard.astro
@@ -4,7 +4,8 @@ import { Icon } from "astro-icon/components";
 ---
 
 <a target="_blank" href={url}>
-  <button class="btn btn-outline btn-md mr-2"
+  <button
+    class="btn bg-glass btn-md mr-2 hover:bg-primary hover:text-primary-content"
     ><Icon name={icon} class="w-6 h-6" />{url_name}</button
   >
 </a>
