--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,6 +4,9 @@ import { Image } from "astro:assets";
 import avatar from "/src/images/avatar.png";
 
 import * as about from "../pages/about/about.md";
+import ContactCard from "./ContactCard.astro";
+
+const contact = await Astro.glob("../pages/contact/*.md");
 ---
 
 <header class="mx-auto pt-6 pb-2 relative">
@@ -39,6 +42,21 @@ import * as about from "../pages/about/about.md";
         <Icon name="carbon:location" class="w-4 h-4 mr-1" />
         <p class="text-sm text-secondary">{about.frontmatter.location}</p>
       </div>
+    </div>
+    <div
+      class="flex flex-wrap content-around gap-4 md:gap-10 justify-center mb-4 mt-5"
+    >
+      {
+        contact.map((item) => {
+          return (
+            <ContactCard
+              url={item.frontmatter.url}
+              url_name={item.frontmatter.title}
+              icon={item.frontmatter.icon}
+            />
+          );
+        })
+      }
     </div>
   </article>
 </header>
