--- a/src/components/ContactCard.astro
+++ b/src/components/ContactCard.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon/components";
 
 <a target="_blank" href={url}>
   <button
-    class="btn bg-glass btn-md mr-2 hover:bg-primary hover:text-primary-content"
+    class="w-[160px] lg:w-[140px] btn btn-outline mr-2 hover:bg-primary hover:text-primary-content duration-700"
     ><Icon name={icon} class="w-6 h-6" />{url_name}</button
   >
 </a>
