fix: `Skill Icons` icon size on mobile

--- a/src/components/MadeWithAstro.astro
+++ b/src/components/MadeWithAstro.astro
@@ -40,10 +40,10 @@
     href="https://github.com/tandpfun/skill-icons"
   >
     <svg
-      viewBox="0 0 2096 463"
+      viewBox="0 0 1000 463"
       fill="none"
       xmlns="http://www.w3.org/2000/svg"
-      class="h-5"
+      class="h-5 w-min"
       ><g filter="url(#filter0_i_105_490)"
         ><rect y="48" width="112" height="112" rx="30" fill="#F0DB4F"></rect></g
       >
