feat: add project description to `ProjectCard`

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -13,7 +13,7 @@ const project = projectEntry.data;
 ---
 
 <div class:list={classList} class="card card-compact card-bordered" {...rest}>
-    <div class="card-body gap-2" style="padding: 0;">
+    <div class="card-body gap-4" style="padding: 0;">
         <div class="flex justify-between">
             <div class="text-left">
                 <h1
@@ -40,19 +40,23 @@ const project = projectEntry.data;
         {
             (
                 <DivImage
-                    classList=" rounded bg-clip-border bg-no-repeat bg-contain bg-center w-full h-[200px] lg:h-[310px] hover:grayscale duration-700"
+                    classList=" rounded bg-clip-border bg-no-repeat bg-contain bg-center mx-auto w-[50vw] h-[200px] h-[280px] lg:max-h-[300px] hover:grayscale duration-700"
                     options={{
                         src: project.images.at(0),
-                        width: 1200,
+                        width: 860,
+                        quality: 100,
                         inferSize: true,
                     }}
                 />
             )
         }
+        <article class="prose text-secondary">
+            <Fragment set:html={projectEntry.body} />
+        </article>
         <div class="flex gap-2 my-4 flex-wrap content-around">
             {
                 project.tags.map((tag) => (
-                    <div class="badge text-center py-3 align-middle shadow-sm badge-outline">
+                    <div class="badge text-center text-xs py-3  align-middle shadow-sm badge-secondary">
                         {tag}
                     </div>
                 ))
@@ -63,6 +67,6 @@ const project = projectEntry.data;
 
 <style>
     .card {
-        @apply p-8 border border-[oklch(var(--s))] w-full hover:shadow-lg transition-all my-0 mb-5;
+        @apply p-6 px-8 border border-[oklch(var(--s))] w-full hover:shadow-lg transition-all my-0 mb-5;
     }
 </style>
