--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -10,11 +10,26 @@ interface Props {
 }
 const { projectEntry, classList, ...rest } = Astro.props;
 const project = projectEntry.data;
+const mainImage = project.images.at(0);
 ---
 
 <div class:list={classList} class="card card-compact card-bordered" {...rest}>
-    <div class="card-body gap-4" style="padding: 0;">
-        <div class="flex justify-between">
+    {
+        mainImage && (
+            <DivImage
+                useOptimizedImgHeight={true}
+                classList="rounded-md bg-clip-border h-[200px] lg:h-[240px] bg-no-repeat bg-contain sm:bg-cover bg-center  w-full hover:grayscale duration-700"
+                options={{
+                    src: mainImage,
+                    height: 700,
+                    quality: 100,
+                    inferSize: true,
+                }}
+            />
+        )
+    }
+    <div class="card-body mt-4 gap-2" style="padding: 0;">
+        <div class="flex items-center justify-between lg:my-2">
             <div class="text-left">
                 <h1
                     class="capitalize card-title font-extrabold tracking-tighter md:text-2xl"
@@ -26,7 +41,7 @@ const project = projectEntry.data;
                 {
                     project.links.map((link) => (
                         <a
-                            class="btn text-secondary btn-link hover:btn-outline"
+                            class="btn text-secondary lg:btn-link bg-base-200  hover:btn-outline"
                             target="_blank"
                             href={link.url}
                         >
@@ -37,19 +52,7 @@ const project = projectEntry.data;
                 }
             </div>
         </div>
-        {
-            (
-                <DivImage
-                    classList=" rounded bg-clip-border bg-no-repeat bg-contain bg-center mx-auto w-[50vw] h-[200px] h-[280px] lg:max-h-[300px] hover:grayscale duration-700"
-                    options={{
-                        src: project.images.at(0),
-                        width: 860,
-                        quality: 100,
-                        inferSize: true,
-                    }}
-                />
-            )
-        }
+
         <article class="prose text-secondary">
             <Fragment set:html={projectEntry.body} />
         </article>
@@ -67,6 +70,6 @@ const project = projectEntry.data;
 
 <style>
     .card {
-        @apply p-6 px-8 border border-[oklch(var(--s))] w-full hover:shadow-lg transition-all my-0 mb-5;
+        @apply p-6 px-8 border border-[oklch(var(--s))] w-full md:hover:shadow-lg transition-all my-0 mb-5;
     }
 </style>
