fix: move `BASE_PATH` to constants file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import "@fontsource-variable/dm-sans";
 import Header from "../components/Header.astro";
 import MainTabs from "../components/MainTabs.astro";
 import MadeWithAstro from "../components/MadeWithAstro.astro";
-import { BASE_PATH } from "astro.config.mjs";
+import { BASE_PATH } from "@/constants";
 
 const title = "Mouayad Alhamwi | Website";
 
