--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,4 +101,7 @@ function getPublicAssetUrl(assetPath: string): string {
   * {
     scrollbar-color: oklch(var(--bc)) oklch(var(--b1)) !important;
   }
+  .card {
+    @apply p-8 border border-2 border-secondary hover:shadow-lg transition-shadow w-full;
+  }
 </style>
