--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,7 +5,7 @@ const {classList, timeframe, title, description, org, tags,links,images, locatio
   Astro.props;
 ---
 
-<div class:list={classList} class="card card-compact card-bordered  p-8 border border-[oklch(var(--s))] w-full md:w-112 lg:w-128 hover:shadow-lg transition-all my-0">
+<div class:list={classList} class="card card-compact card-bordered md:w-112 lg:w-128  my-0">
   <div class="card-body gap-4" style="padding: 0;">
     <div class="grid grid-cols-3 gap-y-2">
       {title &&
