--- a/src/components/MainTabs.astro
+++ b/src/components/MainTabs.astro
@@ -1,11 +1,9 @@
 ---
-import Section from "./Section.astro";
 import ThemeModeSwitch from "./ThemeModeSwitch.astro";
-import * as about from "../pages/about/about.md";
 
 import Card from "./Card.astro";
-import { Icon } from "astro-icon/components";
 import ProjectsSection from "./ProjectsSection.astro";
+import AboutCard from "./AboutCard.astro";
 
 const works = await Astro.glob("../pages/works/*.md");
 const studies = await Astro.glob("../pages/studies/*.md");
@@ -22,51 +20,7 @@ const studies = await Astro.glob("../pages/studies/*.md");
             checked="checked"
         />
         <div role="tabpanel" class="tab-content">
-            <Section
-                id="about"
-                title={"Who Am I & What I Do"}
-                icon={"carbon:identification"}
-            >
-                <article class="prose leading-8 lg:leading-9 text-secondary">
-                    <Fragment
-                        class:list=" md:text-justify"
-                        set:html={about.compiledContent()}
-                    />
-                </article>
-                <div class="flex font-extrabold md:text-xl my-8">
-                    <Icon name="carbon:tools" class="w-7 h-7 mr-4" />
-                    Currently Using
-                </div>
-                <div class="flex flex-wrap gap-y-5 lg:justify-around">
-                    <div class="lg:basis-2/5">
-                        <div class="h6 mb-6 font-semibold">Front-End</div>
-                        <img
-                            class="hover:grayscale"
-                            alt="Front-End tech-stack"
-                            height="48px"
-                            src="https://skillicons.dev/icons?i=astro,css,html,js,tailwind"
-                        />
-                    </div>
-                    <div class="lg:basis-1/4">
-                        <div class="h6 mb-6 font-semibold">Back-End</div>
-                        <img
-                            class="hover:grayscale"
-                            alt="Back-End tech-stack"
-                            height="48px"
-                            src="https://skillicons.dev/icons?i=express,nodejs,ts"
-                        />
-                    </div>
-                    <div class="lg:basis-1/4">
-                        <div class="h6 mb-6 font-semibold">Tools</div>
-                        <img
-                            alt="Tools I use"
-                            class="hover:grayscale"
-                            height="48px"
-                            src="https://skillicons.dev/icons?i=git,github,vscode,pnpm&theme=dark"
-                        />
-                    </div>
-                </div>
-            </Section>
+            <AboutCard id="about" />
         </div>
 
         <input
