--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,6 +100,6 @@ function getPublicAssetUrl(assetPath: string): string {
     scrollbar-color: oklch(var(--bc)) oklch(var(--b1)) !important;
   }
   .card {
-    @apply p-8 border border-2 border-secondary hover:shadow-lg transition-shadow w-full;
+    @apply p-8 border border-secondary rounded-md hover:shadow-lg transition-shadow w-full;
   }
 </style>
