feat: adjust the body to fit screen height

--- a/src/components/MainTabs.astro
+++ b/src/components/MainTabs.astro
@@ -9,7 +9,7 @@ const works = await Astro.glob("../pages/works/*.md");
 const studies = await Astro.glob("../pages/studies/*.md");
 ---
 
-<div role="tablist" class="tabs h-dvh">
+<div role="tablist" class="tabs lg:h-dvh">
     <input
         type="radio"
         name="nav-tabs"
