--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ function getPublicAssetUrl(assetPath: string): string {
   </head>
   <body class="h-dvh w-full overflow-x-hidden lg:overflow-hidden">
     <main
-      class="max-h-max w-[92vw] mx-auto md:max-w-7xl md:w-[98vw] sm:w-[95vw]"
+      class="min-h-screen lg:min-h-auto max-h-max w-[92vw] mx-auto md:max-w-7xl md:w-[98vw] sm:w-[95vw]"
     >
       <div class="flex flex-col lg:flex-row">
         <div class="lg:fixed">
